--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.5",
+    "@angular/animations": "^9.1.6",
+    "@angular/cdk": "^9.2.3",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
-    "@angular/core": "~9.0.5",
+    "@angular/core": "^9.1.6",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.5",
+    "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.14.3",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.10.12",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -42,6 +48,11 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "@angular-devkit/architect": "~0.900",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   }
 }
