--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
-    "angularfire2": "^5.4.2",
-    "firebase": "^7.14.3",
+    "@progress/kendo-theme-bootstrap": "^4.16.2",
+    "bootstrap": "^4.0.0-beta.2",
+    "firebase": "^7.14.6",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.12.3",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.10.12",
     "tslib": "^1.10.0",
